--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,12 +7,11 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
         link(rel="stylesheet", href="./assets/css/app.css")
-    body 
+    body.wrapper
         //- здесь верстка страницы
-        h1 dgdgdgdg
-        p dfgdgdg
-            a(href="#") fdgfdgdfg
-        include components/test
-
-
+        include components/header
+        main.main 
+            include components/main-section
+            include components/items
+        footer.footer  
         
