--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,12 +1,20 @@
 // Помощники
 //@import 'mixins/mixins';//миксины scss
-//@import 'main/stylesheet';// шрифты
-//@import 'main/parameters';// переменные
+@import 'main/stylesheet';// шрифты
+@import 'main/parameters';// переменные
 
 //Общее
-//@import 'main/reset'; // сброс стилей для кроссбраузерности
-//@import 'main/common'; // общие стили
+@import 'main/reset'; // сброс стилей для кроссбраузерности
+@import 'main/common'; // общие стили
 //@import 'main/grid'; // базовая 12ти колоночная сетка для сайта(сделана на основе bootstrap), классы .container/.row/.col-md-6 и т.д.
 
 // дальше можно писать все стили сайта в этот файл, или писать их в компонентах
-@import "./components/test.scss";
+.container {
+    max-width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+@import './components/header';
+@import './components/main-section';
+@import './components/items;
