--- a/src/assets/scss/main/_common.scss
+++ b/src/assets/scss/main/_common.scss
@@ -1,15 +1,12 @@
 /* COMMON STYLE */
-* {
-    box-sizing: border-box;
-}
-
-body {
+html {
     background: #FFFFFF;
     color: $c-text;
     font-family: $body-font;
     font-size: $font-size-base;
-    line-height: 1.2;
+    line-height: 1.5;
     font-weight: 400;
+    font-style: normal;
     &.fixed {
         overflow: hidden;
     }
@@ -19,11 +16,9 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow-x: hidden;
 }
 .main {
     flex: 1 0 auto;
-    padding-top: 47px;
 }
 .footer {
     flex: 0 0 auto;
