--- a/src/assets/scss/main/_parameters.scss
+++ b/src/assets/scss/main/_parameters.scss
@@ -1,24 +1,24 @@
 //GRID
 //точки адаптива
-$lg: 1310px;
+$lg: 1170px;
 $md: 1024px;
 $sm: 768px;
 $xs: 576px;
 
 //Цвета макета
-$c-primary: #e92e27;//основной цвет макета
-$c-add: #0076af;//дополнительный цвет макета
-$c-text: #423D4A;//основной цвет текста макета
-$c-text2: #84828D;//дополнительный цвет текста макета
-
+$c-primary: #00CCCC;//основной цвет макета
+$c-add: #018a8a;//дополнительный цвет макета
+$c-text: #0F2336;//основной цвет текста макета
+$c-text2: #576D81;//дополнительный цвет текста макета
+$c-light-bg: #F5F6F7;
 
 // Рандомные переменные проекта
 
 // Размер шрифта
-$font-size-base: 16px;
+$font-size-base: 10px;
 
 
 // Шрифты
-$body-font: 'Montserrat', sans-serif;//основной
-$headers-font: 'Montserrat', sans-serif;//для заголовков
-$add-font: 'Open Sans', sans-serif;//дополнительный
+$body-font: 'Roboto', sans-serif;//основной
+$headers-font: 'Roboto', sans-serif;//для заголовков
+$add-font: 'Roboto', sans-serif;//дополнительный
