--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,4 +17,5 @@
 
 @import './components/header';
 @import './components/main-section';
-@import './components/items;
+@import './components/items';
+@import './components/tel-section'
