--- a/src/pug/components/main-section.pug
+++ b/src/pug/components/main-section.pug
@@ -5,6 +5,7 @@ section.main-section
                 span.primary Order ahead 
                 | and earn rewards for every purchase
                 span.dot .
-            a.main-section__btn(href="#") Discover how
+            a.main-section__btn(href="#") Discover how 
+                img(src="./assets/imgs/img2.svg", alt="картинка")
         .main-section__img-wrap 
             img.main-section__img(src="./assets/imgs/img1.png", alt="картинка")
