--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,5 +13,6 @@ html(lang="en")
         main.main 
             include components/main-section
             include components/items
+            include components/tel-section
         footer.footer  
         
