--- a/src/assets/scss/components/items.scss
+++ b/src/assets/scss/components/items.scss
@@ -1,1 +1,39 @@
 @import "../main/parameters";
+
+.items {
+
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding-top: 10rem;
+        padding-left: 3.5rem;
+    }
+
+    &__column {
+
+    }
+}
+
+.item {
+
+    &__img {
+        margin-bottom: 2.9rem;
+    }
+
+    &__title {
+    font-weight: bold;
+    font-size: 2.5rem;
+    line-height: 1.3;
+    letter-spacing: 0.02rem;
+    color: $c-text;
+    margin-bottom: 1.2rem;
+    }
+
+    &__description {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: $c-text2;
+    max-width: 29.6rem;
+    }
+} 
