--- a/src/pug/components/items.pug
+++ b/src/pug/components/items.pug
@@ -3,9 +3,9 @@ section.items
         mixin item(img, title, description)
             .items__column 
                 .item 
-                    img.tem__img(src=img, alt="картинка")
+                    img.item__img(src=img, alt="картинка")
                     .item__title=title
                     .item__description=description
-        +item('','Order ahead, skip the line','Feel like a rock star when you bypass the line and save a bunch of time.')
-        +item('','Bonus and discounts','You can enjoy lots of discounts from the selected stores, or accumulate points.')
-        +item("","Share with your friends","Send gifts to your friends and family, and pick up for your coworkers when they can't get away .")
+        +item('./assets/imgs/img3.png','Order ahead, skip the line','Feel like a rock star when you bypass the line and save a bunch of time.')
+        +item('./assets/imgs/img4.png','Bonus and discounts','You can enjoy lots of discounts from the selected stores, or accumulate points.')
+        +item("./assets/imgs/img5.png","Share with your friends","Send gifts to your friends and family, and pick up for your coworkers when they can't get away .")
