--- a/src/assets/scss/components/main-section.scss
+++ b/src/assets/scss/components/main-section.scss
@@ -66,6 +66,31 @@
         bottom: 0;
         right: -0.7vw;
         width: 58.5vw;
-        //width: 100%;
+    }
+}
+
+@media screen and (max-width: $md) {
+    .main-section__title {
+        font-size: 5rem;
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .main-section__title {
+        font-size: 4.8rem;
+    }
+}
+
+@media screen and (max-width: $xs) {
+    .main-section {
+        &__title {
+            font-size: 4rem;
+            margin-bottom: 2rem;
+            line-height: 1;
+        }
+
+        &__btn {
+            padding: 1.5rem 2rem;
+        }
     }
 }
