--- a/src/assets/scss/components/tel-section.scss
+++ b/src/assets/scss/components/tel-section.scss
@@ -5,23 +5,45 @@
     &__row {
         margin-top: 15.8rem;
         background-color: $c-light-bg;
+        margin-bottom: 22rem;
     }
 
     &__content {
         display: flex;
         position: relative;
-        
+        justify-content: flex-end;
     }
 
-    &__img {
+    &__img-crisps {
         position: absolute;
-        bottom: -6rem;
-        right: -5rem;
-        width: 100%;
+        bottom: -5rem;
+        left: 41rem;
+        z-index: +3;
+        width: 15.5vw;
     }
 
-    &__img-wrap {
-        width: 50%;
+    &__img-tel {
+        position: absolute;
+        bottom: -4rem;
+        left: 18rem;
+        z-index: +2;
+        width: 22.3vw;
+    }
+
+    &__img-screen {
+        position: absolute;
+        bottom: -2rem;
+        left: 20rem;
+        z-index: +1;
+        width: 19.3vw;
+    }
+
+    &__img-drink {
+        position: absolute;
+        bottom: 8rem;
+        left: 6rem;
+        z-index: 0;
+        width: 13vw;
     }
 
     &__text {
@@ -30,7 +52,7 @@
 }
 
 .text {
-    padding: 11.5rem 2rem 15.7rem 4rem;
+    padding: 11.5rem 0 15.7rem 4rem;
     &__description {
         font-size: 1.8rem;
         line-height: 1;
@@ -54,5 +76,73 @@
         line-height: 1.5;
         color: $c-text2;
         max-width: 41.4rem;
+    }
+}
+
+@media screen and (max-width: $md) {
+    .tel-section {
+        &__img-crisps {
+            bottom: 4rem;;
+            left: 34rem;
+        }
+
+        &__img-tel {
+            bottom: 5rem;
+            left: 11rem;
+        }
+
+        &__img-screen {
+            bottom: 6rem;
+            left: 12.5rem;
+        }
+
+        &__img-drink {
+            bottom: 17rem;
+            left: -1rem;
+        }
+    }
+    .text__title {
+        font-size: 3.8rem;
+    }
+}
+
+@media screen and (max-width: $xs) {
+    .tel-section {
+        &__img-crisps {
+            bottom: 12rem;;
+            left: 18rem;
+        }
+
+        &__img-tel {
+            bottom: 13rem;
+            left: 8rem;
+        }
+
+        &__img-screen {
+            bottom: 13.5rem;
+            left: 8.6rem;
+        }
+
+        &__img-drink {
+            bottom: 19rem;
+            left: 0rem;
+        }
+    }
+
+    .text {
+        padding-left: 1rem;
+
+        &__title {
+            font-size: 3.4rem;
+        }
+
+        &__description {
+            font-size: 1.6rem;
+            margin-bottom: 1.2rem;
+        }
+
+        &__second-line {
+            margin-bottom: 1.2rem;
+        }
     }
 }
