--- a/src/pug/components/tel-section.pug
+++ b/src/pug/components/tel-section.pug
@@ -1,8 +1,10 @@
 section.tel-section 
     .container.tel-section__row 
         .tel-section__content 
-            .tel-section__img-wrap
-                img.tel-section__img(src="./assets/imgs/img6.png", alt="картинка")
+            img.tel-section__img-crisps(src="./assets/imgs/img6.png", alt="картинка")
+            img.tel-section__img-tel(src="./assets/imgs/img7.png", alt="картинка")
+            img.tel-section__img-screen(src="./assets/imgs/img8.png", alt="картинка")
+            img.tel-section__img-drink(src="./assets/imgs/img9.png", alt="картинка")
             .tel-section__text
                 mixin items(description, title, titles, descriptions)
                     .text 
