--- a/src/assets/scss/components/tel-section.scss
+++ b/src/assets/scss/components/tel-section.scss
@@ -100,6 +100,10 @@
             bottom: 17rem;
             left: -1rem;
         }
+
+        &__row {
+            margin-top: 6rem;
+        }
     }
     .text__title {
         font-size: 3.8rem;
@@ -126,6 +130,10 @@
         &__img-drink {
             bottom: 19rem;
             left: 0rem;
+        }
+
+        &__row {
+            margin-top: -0.2rem;
         }
     }
 
