--- a/src/assets/scss/components/main-section.scss
+++ b/src/assets/scss/components/main-section.scss
@@ -61,11 +61,10 @@
     }
 
     &__img {
-        max-width: 793px;
         position: absolute;
         bottom: 0;
-        right: -0.7vw;
-        width: 58.5vw;
+        right: -4vw;
+        max-width: 58.5vw;
     }
 }
 
