--- a/src/assets/scss/components/items.scss
+++ b/src/assets/scss/components/items.scss
@@ -2,16 +2,20 @@
 
 .items {
 
+    .container {
+        padding: 10rem 3.5rem 0;
+    }
+
     &__row {
         display: flex;
-        justify-content: space-between;
         flex-wrap: wrap;
-        padding-top: 10rem;
-        padding-left: 3.5rem;
+        margin: 0 -15px;
     }
 
     &__column {
         margin-bottom: 2rem;
+        width: 33.3333%;
+        padding: 0 15px;
     }
 }
 
@@ -39,19 +43,30 @@
 } 
 
 @media screen and (max-width: $sm) {
-    .item__title {
-        font-size: 2.3rem;
-    }
+    .item {
+        &__title {
+            font-size: 2.3rem;
+        }
 
-    .item__description {
-        font-size: 1.6rem;
+        &__description {
+            font-size: 1.6rem;
+        }
+        &__description {
+            max-width: 100%;
+        }
     }
 }
 
 @media screen and (max-width: $xs) {
-    .items__row {
-    justify-content: center;
-    text-align: center;
-    padding-top: 3rem;
+    .items {
+        &__column {
+            width: 80%;
+        }
+
+        &__row {
+            justify-content: center;
+            text-align: center;
+            padding-top: 3rem;
+        }
     }
 }
