--- a/src/assets/scss/components/tel-section.scss
+++ b/src/assets/scss/components/tel-section.scss
@@ -3,47 +3,54 @@
 .tel-section {
 
     &__row {
-        margin-top: 15.8rem;
+        margin-top: 16rem;
         background-color: $c-light-bg;
         margin-bottom: 22rem;
+        border-radius: 5rem;
+        display: flex;
     }
 
     &__content {
-        display: flex;
         position: relative;
-        justify-content: flex-end;
+        width: 50%;
+        text-align: center;
+    }
+
+    &__imgs {
+        position: relative;
+        display: inline-block;
+        margin-left: 6rem;
+    }
+
+    &__img-tel {
+        max-width: 22.3vw;
+        position: relative;
+        z-index: 2;
+        margin: -4.5rem 0;
+    }
+
+    &__img-screen {
+        position: absolute;
+        top: -3rem;
+        left: 2rem;
+        max-width: 19.3vw;
+        z-index: 1;
     }
 
     &__img-crisps {
         position: absolute;
         bottom: -5rem;
-        left: 41rem;
-        z-index: +3;
+        left: 23rem;
+        z-index: 3;
         width: 15.5vw;
-    }
-
-    &__img-tel {
-        position: absolute;
-        bottom: -4rem;
-        left: 18rem;
-        z-index: +2;
-        width: 22.3vw;
-    }
-
-    &__img-screen {
-        position: absolute;
-        bottom: -2rem;
-        left: 20rem;
-        z-index: +1;
-        width: 19.3vw;
     }
 
     &__img-drink {
         position: absolute;
-        bottom: 8rem;
-        left: 6rem;
+        bottom: 7rem;
+        left: -12rem;
         z-index: 0;
-        width: 13vw;
+        max-width: 13vw;
     }
 
     &__text {
@@ -52,7 +59,7 @@
 }
 
 .text {
-    padding: 11.5rem 0 15.7rem 4rem;
+    padding: 11.5rem 0 15.7rem 0rem;
     &__description {
         font-size: 1.8rem;
         line-height: 1;
@@ -65,10 +72,7 @@
         font-size: 4rem;
         line-height: 1.38;
         color: $c-text;
-    }
-
-    &__second-line {
-        margin-bottom: 2.1rem;
+        max-width: 20rem;
     }
 
     &__descriptions {
@@ -78,27 +82,32 @@
         max-width: 41.4rem;
     }
 }
+@media screen and (max-width: $lg) {
+    .main-section__img {
+        right: 0vw;
+    }
+}
 
 @media screen and (max-width: $md) {
     .tel-section {
         &__img-crisps {
-            bottom: 4rem;;
-            left: 34rem;
+            bottom: -15rem;;
+            left: 18rem;
         }
 
         &__img-tel {
-            bottom: 5rem;
-            left: 11rem;
+            bottom: -7rem;
+            left: 2rem;
         }
 
         &__img-screen {
-            bottom: 6rem;
-            left: 12.5rem;
+            top: 4rem;
+            left: 3.5rem;
         }
 
         &__img-drink {
-            bottom: 17rem;
-            left: -1rem;
+            bottom: 0rem;
+            left: -6rem;
         }
 
         &__row {
@@ -110,26 +119,50 @@
     }
 }
 
-@media screen and (max-width: $xs) {
+@media screen and (max-width: $sm) {
     .tel-section {
         &__img-crisps {
-            bottom: 12rem;;
-            left: 18rem;
+            bottom: -19rem;;
+            left: 12rem;
         }
 
         &__img-tel {
-            bottom: 13rem;
-            left: 8rem;
+            bottom: -14rem;
+            left: 0rem;
         }
 
         &__img-screen {
-            bottom: 13.5rem;
-            left: 8.6rem;
+            top: 10.5rem;
+            left: 1rem;
         }
 
         &__img-drink {
-            bottom: 19rem;
-            left: 0rem;
+            bottom: -11rem;
+            left: -6rem;
+        }
+    }
+}
+
+@media screen and (max-width: $xs) {
+    .tel-section {
+        &__img-crisps {
+            bottom: -26rem;;
+            left: 7rem;
+        }
+
+        &__img-tel {
+            bottom: -20rem;
+            left: -2rem;
+        }
+
+        &__img-screen {
+            top: 16rem;
+            left: -1.2rem;
+        }
+
+        &__img-drink {
+            bottom: -19rem;
+            left: -7rem;
         }
 
         &__row {
