--- a/src/pug/components/tel-section.pug
+++ b/src/pug/components/tel-section.pug
@@ -1,15 +1,15 @@
 section.tel-section 
     .container.tel-section__row 
-        .tel-section__content 
-            img.tel-section__img-crisps(src="./assets/imgs/img6.png", alt="картинка")
-            img.tel-section__img-tel(src="./assets/imgs/img7.png", alt="картинка")
-            img.tel-section__img-screen(src="./assets/imgs/img8.png", alt="картинка")
-            img.tel-section__img-drink(src="./assets/imgs/img9.png", alt="картинка")
-            .tel-section__text
-                mixin items(description, title, titles, descriptions)
-                    .text 
-                        .text__description=description
-                        .text__title=title 
-                        .text__title.text__second-line=titles 
-                        .text__descriptions=descriptions
-                +items('Your daily pick-me-up','How does','it work.','Start choosing your favorite teas and snacks in your nearby stores and place your orders, accumulate points, share gifts and teas with your friends and co-workers, and finally use our T-Pass to get your free drinks.')
+        .tel-section__content
+            span.tel-section__imgs
+                img.tel-section__img-tel(src="./assets/imgs/img7.png", alt="картинка")
+                img.tel-section__img-screen(src="./assets/imgs/img8.png", alt="картинка")
+                img.tel-section__img-crisps(src="./assets/imgs/img6.png", alt="картинка")
+                img.tel-section__img-drink(src="./assets/imgs/img9.png", alt="картинка")
+        .tel-section__text
+            mixin items(description, title, descriptions)
+                .text
+                    .text__description=description
+                    .text__title=title
+                    .text__descriptions=descriptions
+            +items('Your daily pick-me-up','How does it work.','Start choosing your favorite teas and snacks in your nearby stores and place your orders, accumulate points, share gifts and teas with your friends and co-workers, and finally use our T-Pass to get your free drinks.')
