--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -18,4 +18,5 @@
 @import './components/header';
 @import './components/main-section';
 @import './components/items';
-@import './components/tel-section'
+@import './components/tel-section';
+@import './components/loyalty-points-section';
