--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,6 @@ html(lang="en")
             include components/main-section
             include components/items
             include components/tel-section
+            include components/loyalty-points-section
         footer.footer  
         
