--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -20,3 +20,4 @@
 @import './components/items';
 @import './components/tel-section';
 @import './components/loyalty-points-section';
+@import './components/friends-section';
