--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,5 +15,6 @@ html(lang="en")
             include components/items
             include components/tel-section
             include components/loyalty-points-section
+            include components/friends-section
         footer.footer  
         
