--- a/src/assets/scss/components/main-section.scss
+++ b/src/assets/scss/components/main-section.scss
@@ -45,7 +45,11 @@
         font-size: 1.8rem;
         line-height: 1.2;
         color: $c-text;
-        padding: 1.9rem 2.1rem;
+        padding: 1.9rem 3rem 1.9rem 2.1rem;
+    }
+
+    &__btn img {
+        margin-left: 1rem;
     }
 
     &__btn:hover {
