--- a/src/pug/components/tel-section.pug
+++ b/src/pug/components/tel-section.pug
@@ -7,9 +7,10 @@ section.tel-section
                 img.tel-section__img-crisps(src="./assets/imgs/img6.png", alt="картинка")
                 img.tel-section__img-drink(src="./assets/imgs/img9.png", alt="картинка")
         .tel-section__text
-            mixin items(description, title, descriptions)
+            mixin items(description, title, titles, descriptions)
                 .text
                     .text__description=description
                     .text__title=title
+                    .text__title=titles
                     .text__descriptions=descriptions
-            +items('Your daily pick-me-up','How does it work.','Start choosing your favorite teas and snacks in your nearby stores and place your orders, accumulate points, share gifts and teas with your friends and co-workers, and finally use our T-Pass to get your free drinks.')
+            +items('Your daily pick-me-up','How does', 'it work.','Start choosing your favorite teas and snacks in your nearby stores and place your orders, accumulate points, share gifts and teas with your friends and co-workers, and finally use our T-Pass to get your free drinks.')
