--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,3 +21,5 @@
 @import './components/tel-section';
 @import './components/loyalty-points-section';
 @import './components/friends-section';
+@import './components/links-section';
+@import './components/footer';
