--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,5 +16,7 @@ html(lang="en")
             include components/tel-section
             include components/loyalty-points-section
             include components/friends-section
+            include components/links-section
         footer.footer  
+            include components/footer
         
