--- a/src/assets/scss/components/main-section.scss
+++ b/src/assets/scss/components/main-section.scss
@@ -72,6 +72,12 @@
     }
 }
 
+@media screen and (max-width: $lg) {
+    .main-section__img {
+        right: 0vw;
+    }
+}
+
 @media screen and (max-width: $md) {
     .main-section__title {
         font-size: 5rem;
