--- a/src/pug/components/friends-section.pug
+++ b/src/pug/components/friends-section.pug
@@ -1,7 +1,7 @@
 section.friends-section 
-    .container.friends-section__row 
-        .friends-section__content 
-            .friends-section__text
+    div.container.friends-section__row 
+        div.friends-section__content 
+            div.friends-section__text
                 +items("Please your friends","Send gifts and", "order for groups","Send Gifts with a value for your friends and family and use it on their favorite stores. Be the rock star make Group Orders and pick up for your coworkers when they can't get away.")
             span.tel-section__imgs
                 img.tel-section__img-tel(src="./assets/imgs/img14.png", alt="картинка")
