--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,16 +1,16 @@
 footer.footer
     img.footer__img-left(src="./assets/imgs/img21.png", alt="картинка")
     img.footer__img-right(src="./assets/imgs/img22.png", alt="картинка")
-    .container.footer__row
-        .footer__content 
-            .footer__logo 
+    div.container.footer__row
+        div.footer__content 
+            div.footer__logo 
                 a(href="#") 
                     img(src="./assets/imgs/img23.svg", alt="картинка")
-            .footer__text
-                .text__a
+            div.footer__text
+                div.text__a
                     p.title Company
                     a.a(href="#") Merchant Portal
-                .text__a
+                div.text__a
                     p.title Support
                     ul 
                         li.li 
@@ -19,7 +19,7 @@ footer.footer
                             a.a(href="#") Terms of Service
                         li.li 
                             a.a(href="#") Privacy Policy
-                .text__a
+                div.text__a
                     p.title Follow Us
                     ul 
                         li.li 
