--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,5 +1,5 @@
 header.header 
-    .container.header__row
+    div.container.header__row
         a.logo(href="#")
             img.logo__img(src="./assets/imgs/logo.svg", alt="картинка")
         ul.links 
