--- a/src/pug/components/items.pug
+++ b/src/pug/components/items.pug
@@ -1,12 +1,12 @@
 section.items 
-    .container
-        .items__row
+    div.container
+        div.items__row
             mixin item(img, title, description)
-                .items__column
-                    .item
+                div.items__column
+                    div.item
                         img.item__img(src=img, alt="картинка")
-                        .item__title=title
-                        .item__description=description
+                        div.item__title=title
+                        div.item__description=description
             +item('./assets/imgs/img3.png','Order ahead, skip the line','Feel like a rock star when you bypass the line and save a bunch of time.')
             +item('./assets/imgs/img4.png','Bonus and discounts','You can enjoy lots of discounts from the selected stores, or accumulate points.')
             +item("./assets/imgs/img5.png","Share with your friends","Send gifts to your friends and family, and pick up for your coworkers when they can't get away .")
