--- a/src/pug/components/links-section.pug
+++ b/src/pug/components/links-section.pug
@@ -1,12 +1,12 @@
 section.links-section 
-    .container.links-section__row 
-        .links-section__content
+    div.container.links-section__row 
+        div.links-section__content
             img.content__img(src="./assets/imgs/img18.svg", alt="картинка") 
-            .content__title Enjoy your afternoon tea with a snack 
-            .content__send-link
+            div.content__title Enjoy your afternoon tea with a snack 
+            div.content__send-link
                 input.content__input(type="text" placeholder="Enter mobile number")
                 a.content__a(href="#") Send Link
-            .content__buttons
+            div.content__buttons
                 a.content__button(href="#")
                     img(src="./assets/imgs/img19.svg", alt="картинка")
                 a.content__button(href="#")
