--- a/src/pug/components/main-section.pug
+++ b/src/pug/components/main-section.pug
@@ -1,11 +1,11 @@
 section.main-section 
-    .container.main-section__row 
-        .main-section__content 
+    div.container.main-section__row 
+        div.main-section__content 
             h1.main-section__title 
                 span.primary Order ahead 
                 | and earn rewards for every purchase
                 span.dot .
             a.main-section__btn(href="#") Discover how 
                 img(src="./assets/imgs/img2.svg", alt="картинка")
-        .main-section__img-wrap 
+        div.main-section__img-wrap 
             img.main-section__img(src="./assets/imgs/img1.png", alt="картинка")
