--- a/src/assets/scss/components/items.scss
+++ b/src/assets/scss/components/items.scss
@@ -67,6 +67,7 @@
             justify-content: center;
             text-align: center;
             padding-top: 3rem;
+            margin-bottom: 7rem;
         }
     }
 }
